@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {

}

class Ship{
-MMSI
-name
-IMO
-callsign
-type
-length
-width
-draft
}

class Containers{
-ContainerNumber
-ISOCode
-MaxWeight
-ContainerWeight
-MaxWeightPacked
-MaxVolumePacked
-Certificates
-RepairRecomendation
-Temperature
}

class CargoManifest{
-id
-shipMMSI
-portID
}

Company "1" -- "*" Ship : owns >
Ship "1" -- "*" Containers: has >
CargoManifest "*" -- "1" Ship : assigned to >
CargoManifest "1" -- "*" Containers : has >

@enduml